tests/positive/binary_operations_complex.em
int main() {
    int x = 1 + 2 * 3;
    bool b = x > 5 && x < 10;
    return b ? 1 : 0;
}