tests/negative/while_complex.em
int main() {
    while (x > 0) {
        int x = 1;
    }
    return 0;
}